# MapBuilder

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  MapBuilder  README.md  SFMLProjectTemplate  build.ninja  cmake_install.cmake
.github/: FUNDING.yml
Makefiles/: default_vars.mk
Testing/Temporary/: CTestCostData.txt
assets/maps/: 163501584986.map  marek.map  marek2.map  marek3.map
assets/profiles/: 163501180683.profile  marek.profile  mathias.profile  skeletons.profile  test.profile
includes/Components/: Components.hpp
includes/Editor/: EditorState.hpp  EditorWidget.hpp
includes/EditorSettings/: EditorSettingsState.hpp
includes/Element/: Element.hpp
includes/Map/: ExportFormat.hpp  Map.hpp
includes/Menu/: MenuState.hpp
includes/Profile/: Profile.hpp  ProfileState.hpp
includes/Settings/: SettingsState.hpp
includes/StateManager/: Data.hpp  State.hpp  StateAction.hpp  StateManager.hpp  States.hpp
includes/System/: InputAction.hpp  Window.hpp
srcs/: main.cpp
srcs/Components/: Button.cpp
srcs/Editor/: EditorState.cpp  EditorWidget.cpp  GUI.cpp
srcs/EditorSettings/: EditorSettings.cpp  GUI.cpp
srcs/Element/: Element.cpp
srcs/Map/: AdvancedExport.cpp  BasicExport.cpp  Map.cpp
srcs/Menu/: GUI.cpp  MenuState.cpp
srcs/Profile/: GUI.cpp  Profile.cpp  ProfileState.cpp
srcs/ResourceManager/: ResourceManager.cpp
srcs/Settings/: SettingsState.cpp
srcs/StateManager/: StateManager.cpp
srcs/System/: InputManager.cpp  Window.cpp
